--- a/zinnia_threaded_comments/templates/zinnia/entry_detail_base.html
+++ b/zinnia_threaded_comments/templates/zinnia/entry_detail_base.html
@@ -28,98 +28,99 @@
             </span>
         </h3>
 
-{% if object.comment_count %}
-    {% with comment_list=object.comments %}
-        {% block comments-loop %}
-            {% recursetree comment_list %}
-                {% with comment=node %}
-                <!-- One comment tree -->
-                <div id="comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
-                     class="comment mb-2 row {% if comment.user %} authenticated-comment{% if comment.user.is_staff %} staff-comment{% endif %}{% if comment.user.is_superuser %} superuser-comment{% endif %}{% endif %}">
+        {% if object.comments_are_open %}
+            {% render_comment_form for object %}
+        {% endif %}
 
-                    <!-- Comentator's avatar -->
-                    {# block comment-image #}
-                    <div class="comment-avatar col-md-1 col-sm-2 text-center pr-1">
-                        <a href="">
-                            <img class="mx-auto rounded-circle img-fluid" alt="{{ comment.name }}"
-                                 src='{% get_gravatar comment.email 60 "G" %}'>
-                        </a>
-                    </div>
-                    {# endblock comment-image #}
-                    <!--//END Comentator's avatar -->
+        {% if object.comment_count %}
+            {% with comment_list=object.comments %}
+                {% block comments-loop %}
+                    {% recursetree comment_list %}
+                        {% with comment=node %}
+                        <!-- One comment tree -->
+                        <div id="comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
+                             class="comment mb-2 row {% if comment.user %} authenticated-comment{% if comment.user.is_staff %} staff-comment{% endif %}{% if comment.user.is_superuser %} superuser-comment{% endif %}{% endif %}">
 
-                    <div class="comment-content col-md-11 col-sm-10">
-                        {# block comment-info #}
-                        <h6 class="small comment-meta">
-                            <a href="{% if comment.url %}{{ comment.url }}{% else %}#{% endif %}">
-                                {{ comment.name }}
-                            </a>
-                            {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
-                            <a href="#comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
-                               id="c{{ comment.pk }}" class="anchor-link"
-                               title="{% trans "Direct link to this comment" %}"> #</a>
-                        </h6>
-                        {# endblock comment-info #}
-
-                        {# block comment-content #}
-                        <div class="comment-body">
-                            {{ comment.comment|linebreaks }}
-
-                            {# block comment-reply-link #}
-                                {% if object.comments_are_open %}
-                                <p style="margin-top: -10px !important;">
-                                <a href="#comment-form" class="text-right small"
-                                   onclick="return addComment.moveForm('comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}', '{{ comment.pk }}', 'comment-form')">
-                                    <i class="fa fa-reply" aria-hidden="true"></i> {% trans "Reply" %}
+                            <!-- Comentator's avatar -->
+                            {# block comment-image #}
+                            <div class="comment-avatar col-md-1 col-sm-2 text-center pr-1">
+                                <a href="">
+                                    <img class="mx-auto rounded-circle img-fluid" alt="{{ comment.name }}"
+                                         src='{% get_gravatar comment.email 60 "G" %}'>
                                 </a>
-                                </p>
+                            </div>
+                            {# endblock comment-image #}
+                            <!--//END Comentator's avatar -->
+
+                            <div class="comment-content col-md-11 col-sm-10">
+                                {# block comment-info #}
+                                <h6 class="small comment-meta">
+                                    <a href="{% if comment.url %}{{ comment.url }}{% else %}#{% endif %}">
+                                        {{ comment.name }}
+                                    </a>
+                                    {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
+                                    <a href="#comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
+                                       id="c{{ comment.pk }}" class="anchor-link"
+                                       title="{% trans "Direct link to this comment" %}"> #</a>
+                                </h6>
+                                {# endblock comment-info #}
+
+                                {# block comment-content #}
+                                <div class="comment-body">
+                                    {{ comment.comment|linebreaks }}
+
+                                    {# block comment-reply-link #}
+                                        {% if object.comments_are_open %}
+                                        <p style="margin-top: -10px !important;">
+                                        <a href="#comment-form" class="text-right small"
+                                           onclick="return addComment.moveForm('comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}', '{{ comment.pk }}', 'comment-form')">
+                                            <i class="fa fa-reply" aria-hidden="true"></i> {% trans "Reply" %}
+                                        </a>
+                                        </p>
+                                        {% endif %}
+                                    {# endblock comment-reply-link #}
+                                </div>
+                                {# endblock comment-content #}
+                            </div>
+
+                            <!-- reply is indented -->
+                            <!-- Reply comments -->
+                            {% block comment-replies %}
+                                {% if not comment.is_leaf_node %}
+                                <div class="comment-reply col-md-11 offset-md-1 col-sm-10 offset-sm-2">
+                                    {{ children }}
+                                </div>
                                 {% endif %}
-                            {# endblock comment-reply-link #}
+                            {% endblock comment-replies %}
+                            <!--//END Reply comments -->
+                            <!-- /reply is indented -->
                         </div>
-                        {# endblock comment-content #}
+                        <!-- //END One comment tree  -->
+                        {% endwith %}
+                    {% endrecursetree %}
+        <!--
+                    <div class="row pt-2">
+                        <div class="col-12">
+                            <a href="" class="btn btn-sm btn-primary">Comment</a>
+                        </div>
                     </div>
-
-                    <!-- reply is indented -->
-                    <!-- Reply comments -->
-                    {% block comment-replies %}
-                        {% if not comment.is_leaf_node %}
-                        <div class="comment-reply col-md-11 offset-md-1 col-sm-10 offset-sm-2">
-                            {{ children }}
-                        </div>
-                        {% endif %}
-                    {% endblock comment-replies %}
-                    <!--//END Reply comments -->
-                    <!-- /reply is indented -->
-                </div>
-                <!-- //END One comment tree  -->
-                {% endwith %}
-            {% endrecursetree %}
-<!--
-            <div class="row pt-2">
-                <div class="col-12">
-                    <a href="" class="btn btn-sm btn-primary">Comment</a>
-                </div>
-            </div>
- -->
-        {% endblock comments-loop %}
-    {% endwith %}{# //END with comment_list=object.comments #}
-
-    {% if not object.comments_are_open %}
-        <strong style="color: grey;">{% trans "Comments are closed." %}</strong>
-    {% endif %}
-
-{% else %}{# //ELSE if object.comment_count #}
-
-    {% if object.comments_are_open %}
-        <strong style="color: grey;">{% trans "No comments yet." %}</strong>
-    {% else %}
-        <strong style="color: grey;">{% trans "Comments are closed." %}</strong>
-    {% endif %}
-
-{% endif %}
-
+         -->
+                {% endblock comments-loop %}
+            {% endwith %}{# //END with comment_list=object.comments #}
+            {% if not object.comments_are_open %}
+                <strong style="color: grey;">{% trans "Comments are closed." %}</strong>
+            {% endif %}
+        {% else %}{# //ELSE if object.comment_count #}
+            {% if object.comments_are_open %}
+                <strong style="color: grey;">{% trans "No comments yet." %}</strong>
+            {% else %}
+                <strong style="color: grey;">{% trans "Comments are closed." %}</strong>
+            {% endif %}
+        {% endif %}
     </div>
 </div>
 {% endblock entry-comments %}
 
 
+{% block entry-comments-form %}
+{% endblock entry-comments-form %}
