--- a/zinnia_threaded_comments/templates/zinnia/entry_detail_base.html
+++ b/zinnia_threaded_comments/templates/zinnia/entry_detail_base.html
@@ -1,4 +1,5 @@
-{% extends "zinnia_bootstrap4_custom:zinnia/entry_detail_base.html" %}
+{# {% extends "zinnia_bootstrap4_custom:zinnia/entry_detail_base.html" %} #}
+{% extends "zinnia:zinnia/entry_detail_base.html" %}
 {% load i18n %}
 {% load static %}
 {% load comments %}
